CSS　サファリ対応

--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,7 @@ body {
   background: whitesmoke;
 }
 
+_:lang(x) + _:-webkit-full-screen-document,
 .isComplete {
   text-decoration: line-through red 3px;
 }
