--- a/styles.css
+++ b/styles.css
@@ -2,9 +2,10 @@ body {
   background: whitesmoke;
 }
 
-_:lang(x) + _:-webkit-full-screen-document,
 .isComplete {
-  text-decoration: line-through red 3px;
+  text-decoration-line: line-through;
+  text-decoration-color: red;
+  text-decoration-thickness: 3px;
 }
 
 h1 {
